Fixing contrast problem

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,7 +2,7 @@ body {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, sans-serif;
   margin: 0 auto;
-  background: #111;
+  background: #171818;
   color: white;
 }
 
